# TCP-IP_SERVER_FUNCTIONAL_CPP

./: CMakeLists.txt  README.md  main.cpp
FileParser/inc/: FileParser.h
client/inc/: Client.h
client/sr/: Client.cpp  main.cpp
jpegParser/inc/: jpegParser.h
jpegParser/sr/: jpegParser.cpp
pngParser/inc/: pngParser.h
pngParser/sr/: pngParser.cpp
server/inc/: Server.h
server/sr/: Server.cpp
tests/: CMakeLists.txt  test_file.cpp
